2016-09-29  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp): Add expose function for drawing the
	canvas.
	(MainApp.show): Add show function to draw the lines through
	drawLines method
	(MainApp.__createInputs): Add missing entries, remove useless
	ones, set default values.

	* gui/widgets.py (NumberEntry): Document the class

2016-09-27  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/widgets.py: Created module for new widgets
	(NumberEntry): Derived class from Gtk.Entry for numerical entries.

	* gui/mainWindow.py (MainApp.__createInputs): Moved inputs from a
	vertical box to a grid.
	(MainApp.__createInputs): Created a dictionary to hold all inputs

2016-09-26  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py: Created main window draft.
	(MainApp.__createInputs): Added some inputs to modify algorithm.
	TODO: Move the layout to grid

	* mainGui.py: Created main script to handle the GUI.
